--- a/views/users.html
+++ b/views/users.html
@@ -15,7 +15,7 @@
     <ul>
         <% for(var i=0,l=users.length;i<l;i++){ %>
             <li>
-                <%=users[i].name %>
+                <%=users[i].EMAIL %>
             </li>
             <% } %>
     </ul>
