--- a/views/index.html
+++ b/views/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <a href="/users">users</a>
-    <h1><%= title %></h1>
-    <p>Welcome to
-        <%=title %>
-    </p>
+    <header class="container">
+        <a href="/users">users</a>
+        <h1><%= title %></h1>
+        <p>Welcome to
+            <%=title %>
+        </p>
+    </header>
+    <div class="main container"></div>
+
+    <% include footer.html %>
 </body>
 
 </html>
