--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,6 +103,9 @@ input, select {
 }
 
 /***********************global****************************/
+html, body{
+    height: 100%;
+}
 body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -128,6 +131,45 @@ a {
 
 /***********************header****************************/
 /***********************main****************************/
+.main {
+    width: 100%;
+    height: 100%;
+    background: none repeat scroll 0 0 #5cc1af;
+}
+
+.main .joinUs {
+    margin: 0 auto;
+    max-width: 966px;
+    height: 100%;
+    position: relative;
+}
+
+.joinUs h3 {
+    width: 100%;
+    position: absolute;
+    font-size: 60px;
+    top: 40%;
+    text-align: center;
+}
+
+.joinUs .more {
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+.joinUs .join,
+.joinUs .learn {
+    color: #333;
+    display: inline-block;
+    width: 20%;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #e3e3e3;
+    border-radius: 10px;
+    margin-left: 40px;
+}
 /***********************footer****************************/
 #footer{
     padding-top: 60px;
