--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,11 +130,53 @@ a {
 }
 
 /***********************header****************************/
+#headerNav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    background: none repeat scroll 0 0 #0C182D
+}
+#headerNav .container{
+    width: 966px;
+    margin: 0 auto;
+    position: relative;
+}
+#headerNav .nav{
+    margin-left: 300px;
+}
+#headerNav .nav:before{
+    content: "";
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: red;
+    position: absolute;
+    left: 0px;
+    top: 50%;
+    margin-top: -20px;
+}
+#headerNav .nav li{
+    display: inline-block;
+    width: 20%;
+}
+#headerNav .nav a{
+    color: #fff;
+    display: block;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
 /***********************main****************************/
 .main {
     width: 100%;
     height: 100%;
     background: none repeat scroll 0 0 #5cc1af;
+    min-height: 280px;
 }
 
 .main .joinUs {
@@ -163,11 +205,11 @@ a {
 .joinUs .learn {
     color: #333;
     display: inline-block;
-    width: 20%;
-    height: 40px;
-    line-height: 40px;
+    width: 25%;
+    height: 50px;
+    line-height: 50px;
     border: 1px solid #e3e3e3;
-    border-radius: 10px;
+    border-radius: 25px;
     margin-left: 40px;
 }
 /***********************footer****************************/
