--- a/views/index.html
+++ b/views/index.html
@@ -7,51 +7,20 @@
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <style>
-        .main {
-            width: 100%;
-            height: 100%;
-            background: none repeat scroll 0 0 #5cc1af;
-        }
 
-        .main .joinUs {
-            margin: 0 auto;
-            max-width: 966px;
-            height: 100%;
-            position: relative;
-        }
-
-        .joinUs h3 {
-            width: 100%;
-            position: absolute;
-            font-size: 60px;
-            top: 40%;
-            text-align: center;
-        }
-
-        .joinUs .more {
-            position: absolute;
-            bottom: 30px;
-            width: 100%;
-            text-align: center;
-        }
-
-        .joinUs .join,
-        .joinUs .learn {
-            color: #333;
-            display: inline-block;
-            width: 20%;
-            height: 40px;
-            line-height: 40px;
-            border: 1px solid #e3e3e3;
-            border-radius: 10px;
-            margin-left: 40px;
-        }
     </style>
 </head>
 
 <body>
-    <header class="container">
-
+    <header id="headerNav">
+        <div class="container">
+            <ul class="nav">
+                <li><a href="#work">work</a></li>
+                <li><a href="#work">we</a></li>
+                <li><a href="#work">contact</a></li>
+                <li><a href="#work">message</a></li>
+            </ul>
+        </div>
     </header>
     <div class="main">
         <div class="joinUs">
@@ -60,6 +29,9 @@
                 <a href="#gotojoinus" class="join">JOIN US</a><a href="#more" class="learn">Learn more</a>
             </div>
         </div>
+        <article></article>
+        <article></article>
+        <article></article>
     </div>
 
     <% include footer.html %>
