--- a/views/index.html
+++ b/views/index.html
@@ -7,29 +7,46 @@
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <style>
-
     </style>
 </head>
 
 <body>
     <header id="headerNav">
-        <div class="container">
+        <div class="container clearfix">
             <ul class="nav">
-                <li><a href="#work">work</a></li>
-                <li><a href="#work">we</a></li>
-                <li><a href="#work">contact</a></li>
-                <li><a href="#work">message</a></li>
+                <li><a href="#work" class="active">work</a>
+                </li>
+                <li><a href="#work">we</a>
+                </li>
+                <li><a href="#work" class="focus">contact</a>
+                </li>
+                <li><a href="#work">message</a>
+                </li>
             </ul>
         </div>
     </header>
     <div class="main">
-        <div class="joinUs">
-            <h3>we need you join us</h3>
-            <div class="more">
-                <a href="#gotojoinus" class="join">JOIN US</a><a href="#more" class="learn">Learn more</a>
+        <div class="home">
+            <div class="joinUs">
+                <h3>we need you join us</h3>
+                <div class="more">
+                    <a href="#gotojoinus" class="join">JOIN US</a><a href="#more" class="learn">Learn more</a>
+                </div>
             </div>
         </div>
-        <article></article>
+
+        <div class="work container">
+            <article>
+                <header>
+                    <h2 class="title">what we to do</h2>
+                </header>
+                <section class="content">
+                    <img src="" alt="title">
+                    <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                </section>
+            </article>
+        </div>
+
         <article></article>
         <article></article>
     </div>
