--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,11 @@
                 <div class="more">
                     <a href="#gotojoinus" class="join">JOIN US</a><a href="#more" class="learn">Learn more</a>
                 </div>
+
             </div>
+            <div class="joinUsBg">
+            </div>
+
         </div>
 
         <div class="work container">
