--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,6 +194,7 @@ a {
     max-width: 966px;
     height: 100%;
     position: relative;
+
 }
 
 .joinUs h3 {
@@ -203,6 +204,7 @@ a {
     top: 40%;
     text-align: center;
     color: rgba(255,255,255, 1);
+    z-index: 2;
 }
 
 .joinUs .more {
@@ -210,6 +212,7 @@ a {
     bottom: 30px;
     width: 100%;
     text-align: center;
+    z-index: 2;
 }
 
 .joinUs .join,
@@ -222,6 +225,14 @@ a {
     border: 1px solid #e3e3e3;
     border-radius: 25px;
     margin-left: 40px;
+}
+.joinUsBg{
+    height: 90%;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    opacity: 0.1;
+    background: url('/images/logos-24.png') repeat-x scroll 0 0 transparent;
 }
 .main .work article{
     margin: 20px 0;
