--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <style>
+
+
     </style>
 </head>
 
@@ -40,12 +42,26 @@
         </div>
 
         <div class="work container">
-            <article>
+            <article class="whatToDo">
                 <header>
                     <h2 class="title">what we to do</h2>
                 </header>
-                <section class="content">
-                    <img src="" alt="title">
+                <section class="content clearfix">
+                    <div class="imgageWrapper">
+                        <img src="images/psb.jpg" alt="title">
+                    </div>
+
+                    <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                </section>
+            </article>
+            <article class="whatShouldDo">
+                <header>
+                    <h2 class="title">what we should do</h2>
+                </header>
+                <section class="content clearfix">
+                     <div class="imgageWrapper">
+                        <img src="images/psb.jpg" alt="title">
+                    </div>
                     <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
                 </section>
             </article>
