--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,9 @@
     <title>
         <%=title %>
     </title>
+    <link rel='stylesheet' href='/stylesheets/global.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+
     <style>
 
 
@@ -27,6 +29,7 @@
             </ul>
         </div>
     </header>
+
     <div class="main">
         <div class="home">
             <div class="joinUs">
@@ -42,7 +45,7 @@
         </div>
 
         <div class="work container">
-            <article class="whatToDo">
+            <article class="whatToDo clearfix">
                 <header>
                     <h2 class="title">what we to do</h2>
                 </header>
@@ -52,23 +55,46 @@
                     </div>
 
                     <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                    <img src="images/psb.jpg" alt="title" class="we">
                 </section>
             </article>
-            <article class="whatShouldDo">
+            <article class="whatShouldDo clearfix">
                 <header>
                     <h2 class="title">what we should do</h2>
                 </header>
                 <section class="content clearfix">
-                     <div class="imgageWrapper">
+                    <div class="imgageWrapper">
                         <img src="images/psb.jpg" alt="title">
                     </div>
                     <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                    <img src="images/psb.jpg" alt="title" class="we">
+                </section>
+            </article>
+            <article class="whatShouldDo clearfix">
+                <header>
+                    <h2 class="title">what we should do</h2>
+                </header>
+                <section class="content clearfix">
+                    <div class="imgageWrapper">
+                        <img src="images/psb.jpg" alt="title">
+                    </div>
+                    <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                    <img src="images/psb.jpg" alt="title" class="we">
+                </section>
+            </article>
+            <article class="whatShouldDo clearfix">
+                <header>
+                    <h2 class="title">what we should do</h2>
+                </header>
+                <section class="content clearfix">
+                    <div class="imgageWrapper">
+                        <img src="images/psb.jpg" alt="title">
+                    </div>
+                    <p>Coinbase is one of the world's most popular Bitcoin wallets, and they've gotten there with a focus on design that's uncommon for financial services. We helped them take that further with a jargon-free marketing site.</p>
+                    <img src="images/psb.jpg" alt="title" class="we">
                 </section>
             </article>
         </div>
-
-        <article></article>
-        <article></article>
     </div>
 
     <% include footer.html %>
